--- a/relayControl/androidProject/app/src/main/res/layout/activity_mcp3008.xml
+++ b/relayControl/androidProject/app/src/main/res/layout/activity_mcp3008.xml
@@ -6,4 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".Mcp3008">
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginEnd="24dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
